# ChangeLog for dev-ruby/rdoc
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rdoc/ChangeLog,v 1.31 2010/07/19 08:08:53 graaff Exp $

*rdoc-2.5.9 (19 Jul 2010)

  19 Jul 2010; Hans de Graaff <graaff@gentoo.org> +rdoc-2.5.9.ebuild:
  Version bump.

  22 May 2010; Alex Legler <a3li@gentoo.org> rdoc-2.5.6.ebuild:
  Add REE18 support

  22 May 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  -rdoc-2.4.3-r1.ebuild, rdoc-2.5.6.ebuild:
  Cleanup old versions, use new syntax.

*rdoc-2.5.6 (26 Apr 2010)

  26 Apr 2010; Diego E. Pettenò <flameeyes@gentoo.org> -rdoc-2.5.5.ebuild,
  +rdoc-2.5.6.ebuild, +files/rdoc-2.5.6-ruby19.patch:
  Version bump, add a patch so that tests pass on Ruby 1.9.

*rdoc-2.5.5 (22 Apr 2010)

  22 Apr 2010; Hans de Graaff <graaff@gentoo.org> +rdoc-2.5.5.ebuild:
  Version bump: many enhancements and bug fixes.

  21 Feb 2010; Jonathan Callen <abcd@gentoo.org> rdoc-2.4.3-r1.ebuild:
  Transfer prefix keywords (no other changes)

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> rdoc-2.4.3-r1.ebuild:
  Add ~sparc

  29 Jan 2010; Raúl Porcel <armin76@gentoo.org> rdoc-2.4.3-r1.ebuild:
  Add ~ia64

  14 Jan 2010; Brent Baude <ranger@gentoo.org> rdoc-2.4.3-r1.ebuild:
  Marking rdoc-2.4.3-r1 ~ppc for bug 300739

  13 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  rdoc-2.4.3-r1.ebuild:
  Enable support for JRuby.

  13 Jan 2010; Brent Baude <ranger@gentoo.org> rdoc-2.4.3-r1.ebuild:
  Marking rdoc-2.4.3-r1 ~ppc64 for bug 297041

*rdoc-2.4.3-r1 (10 Jan 2010)

  10 Jan 2010; Alex Legler <a3li@gentoo.org> -rdoc-2.4.3.ebuild,
  +rdoc-2.4.3-r1.ebuild:
  Properly install the binaries into /usr/bin, bug 300489 by Andy Kittner

  04 Jan 2010; Markus Meier <maekke@gentoo.org> rdoc-2.4.3.ebuild:
  add ~x86, bug #297041

  01 Jan 2010; Alex Legler <a3li@gentoo.org> rdoc-2.4.3.ebuild:
  Fix tests when rdoc is not yet installed (bug 298910), add test dependency
  on minitest, s/$PN/rdoc/ in HOMEPAGE
