@@ -5,13 +5,13 @@ AUX rdoc-2.5.6-ruby19.patch 959 RMD160 951cd3c166dab07f0afcdb46112001b58fbdd05a 
 DIST rdoc-2.5.6.tgz 177856 RMD160 0dfaf267a7b85ae25f49f342eb38d4b8ecc9072a SHA1 e9dee3c1e9c5f0d32af5506989c59069455075a1 SHA256 18ffa0ffdc0d263d571c5a7c515883187e85cc84404902ef69a536660c6d444a
 DIST rdoc-2.5.9.tgz 179223 RMD160 372dfdd8619aa9c1d13f20b20ceefd9215b1b203 SHA1 07b2e0a7818e5dc9de3618d89cb86e8c3cab5e06 SHA256 baae749968775b9dffc5a897e05eee7f8254cdedf762196bdfcf59207fcf9b0a
 EBUILD rdoc-2.5.6.ebuild 1318 RMD160 4c6717616112c15fdf0d34ccfa6279df9220c1b1 SHA1 e45a70efcf32ff1925fa40627997716488c7f76a SHA256 8b068b8cc8d6759527907473854cbf0ae5faece6d82b155608698e689f0d2e10
-EBUILD rdoc-2.5.9.ebuild 1301 RMD160 dc3881b0b76146799f47a4e17611fc58e231282c SHA1 e3f05f5e0983d9ddeb1ef74d0e2f7362b5d0ed10 SHA256 cfc060d283d507e98e22d0c5e361a06a63de8cbad32398bb07115dddb0afb036
-MISC ChangeLog 2577 RMD160 1327633e357cbfb2f189ff8af8ed5c50039ca95d SHA1 84507374a83a3b3d4fe74cf801dbf2699a6e43b6 SHA256 97e1e6e411dae1ebf2909215041ee73c9a72f87217d20e0469e0835f8d19a13d
+EBUILD rdoc-2.5.9.ebuild 1470 RMD160 35a8ef0a1a7061fe2501a08a40f4b2c8a382a14b SHA1 1d17299ff9cd8685dda05faf738709a4b36e0489 SHA256 3dee9a4f2ce38ad9ead34805c6f797a3e0fad91b987ab62149b7e4117e8f0b35
+MISC ChangeLog 2709 RMD160 88dfae134dd6ee7b2906688ed4dc22bffa71acba SHA1 588708b29099d37fe97e7496e8a8551d558774a5 SHA256 0aed6b7c185485f8dcf5ec72cf8ea80cd400096fd91a0a785f91db9b0ceefc99
 MISC metadata.xml 158 RMD160 097f8145a9994f98be4971b43b23b9e5e8bccb66 SHA1 7ac646714b1ab83fda98f3ccdd8b48a31c148b27 SHA256 70b396ab3c7a63a81cb895b7728bd9eccdc9770afdb9919f2c54694b685f7032
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.15 (GNU/Linux)
 
-iF4EAREIAAYFAkxECBoACgkQZihJkut28SsqBwD+OlVFCaanEWi4+QuBYCABhu6+
-YLdGux+nVQktkDpNbEoA/0gPxhXZqtnLYeRT2lifZ1r6OMdbXWUNjH24D4i70nuU
-=XVyt
+iF4EAREIAAYFAkxe9YYACgkQZihJkut28Sua3QEAiiQSxpK1k0vaSYPWHy/4GJoy
+0Lti4Bhneg/ga3d9S0QA/jz9g4oO/kjA7v/Qqj1rbHTqxn6iU7YkPMIwZJa4JDbo
+=F2Sz
 -----END PGP SIGNATURE-----
