@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/rdoc
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rdoc/ChangeLog,v 1.31 2010/07/19 08:08:53 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rdoc/ChangeLog,v 1.32 2010/08/08 18:20:48 graaff Exp $
+
+  08 Aug 2010; Hans de Graaff <graaff@gentoo.org> rdoc-2.5.9.ebuild:
+  Use less existent nonexistent directory, fixing bug 321059.
 
 *rdoc-2.5.9 (19 Jul 2010)
 
